syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.api;

option java_outer_classname = "SecondApi";

service Second {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.Second"
      entity_type: "second"
      state: "io.aggregator.entity.SecondState"
      events: [
        "io.aggregator.entity.SecondActivated",
        "io.aggregator.entity.SubSecondAdded",
        "io.aggregator.entity.SecondAggregationRequested",
        "io.aggregator.entity.SecondAggregated",
        "io.aggregator.entity.ActiveSubSecondAggregated"
      ]
    }
  };

  rpc AddSubSecond(AddSubSecondCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/second/add-sub-second"
      body: "*"
    };
  }

  rpc AggregateSecond(AggregateSecondCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/second/aggregate-second"
      body: "*"
    };
  }

  rpc SubSecondAggregation(SubSecondAggregationCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/second/-sub-second-aggregation"
      body: "*"
    };
  }
}

message AddSubSecondCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  int64 epoch_second = 2 [(kalix.field).entity_key = true];
  int64 epoch_sub_second = 3;
}

message AggregateSecondCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  int64 epoch_second = 2 [(kalix.field).entity_key = true];
  google.protobuf.Timestamp aggregate_request_timestamp = 3;
  string payment_id = 4;
}

message SubSecondAggregationCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  int64 epoch_second = 2 [(kalix.field).entity_key = true];
  int64 epoch_sub_second = 3;
  repeated entity.MoneyMovement money_movements = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}
